--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
                     The Green Page
                 </a>
             </li>
+            <li style="color: #F0F">
+                <a href="pink.html">
+                    The Pink Page
+                </a>
+            </li>
 	    <li style="color: #F0F">  <a href="pink.html">The Pink Page</a></li>
         </ul>
     </body>
