--- a/about/index.html
+++ b/about/index.html
@@ -25,6 +25,11 @@
                     Mary: The Graphic Designer
                 </a>
             </li>
+            <li>
+                <a href="alex-perpitch-harvey.html">
+                    Alex: The Student
+                </a>
+            </li>
         </ul>
         <p>
             <a href="../index.html">
