--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 </a>
             </li>
             <li style="color: #F0F">
-                <a href="pink.html">
+                <a href="feature-by-sperpitchharvey1.html">
                     The Pink Page
                 </a>
             </li>
